--- a/reclass/tests/data/02/classes/one/alpha.yml
+++ b/reclass/tests/data/02/classes/one/alpha.yml
@@ -3,9 +3,11 @@ classes:
 - two.beta
 - ..four
 - ..two.gamma
+- ..init
 
 parameters:
   test1: ${one_beta}
   test2: ${two_beta}
   test3: ${four_alpha}
   test4: ${two_gamma}
+  test5: ${alpha_init}
